# dftbp-extmodel

./: CMakeLists.txt  Makefile
include/: asprintf.h  externalmodel.h
src/: externalmodel.c
test/: Makefile  main.f90
